syntax = "proto3";
package core.protos;

message VanillaSGD {
    float learning_rate = 1;
}

message MomentumSGD {
    float learning_rate = 1;
    float momentum_factor = 2;
}

message FedProx {
    float learning_rate = 1;
    float proximal_term = 2;
}

message Adam {
    float learning_rate = 1;
    float beta_1 = 2;
    float beta_2 = 3;
    float epsilon = 4;
}
